--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -20,13 +20,11 @@ jobs:
           java-version: '17'
 
       - name: Run Gradle build (install Gradle automatically)
+        working-directory: ./PortraitCameraFull     # MUST BE BEFORE "uses"
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: '8.1.1'
           arguments: clean assembleDebug
-        # NOTE: run this step inside the nested project folder
-        # Update this path if your project folder name is different
-        working-directory: ./PortraitCameraFull
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
