--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,61 +1,47 @@
-name: Build Debug APK (auto-detect project)
+plugins {
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+}
 
-on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
+android {
+    namespace 'com.example.portraitcamera'
+    compileSdk 34
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    defaultConfig {
+        applicationId "com.example.portraitcamera"
+        minSdk 24
+        targetSdk 34
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+    }
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: '17'
+    buildTypes {
+        release {
+            minifyEnabled false
+        }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions { jvmTarget = '17' }
+}
 
-      - name: List repository root (debug)
-        run: |
-          echo "Repo contents:"
-          ls -la
-          echo "Searching for settings.gradle..."
-          find . -maxdepth 4 -type f -name 'settings.gradle' -print || true
-        shell: bash
+// NOTE: repositories intentionally omitted here.
+// All repositories are declared in settings.gradle's dependencyResolutionManagement.
 
-      - name: Download Gradle 8.1.1
-        run: |
-          curl -sSLo gradle-8.1.1-bin.zip https://services.gradle.org/distributions/gradle-8.1.1-bin.zip
-          unzip -q gradle-8.1.1-bin.zip -d gradle
-        shell: bash
-
-      - name: Find project directory (where settings.gradle lives)
-        id: findproj
-        run: |
-          proj_file=$(find . -maxdepth 4 -type f -name 'settings.gradle' -print -quit)
-          if [ -z "$proj_file" ]; then
-            echo "No settings.gradle found in repository (within 4 levels). Exiting."
-            exit 2
-          fi
-          proj_dir=$(dirname "$proj_file")
-          # normalize path to remove leading ./ 
-          proj_dir=${proj_dir#./}
-          echo "Found project dir: $proj_dir"
-          echo "proj_dir=$proj_dir" >> $GITHUB_OUTPUT
-        shell: bash
-
-      - name: Build debug APK with Gradle
-        run: |
-          echo "Using Gradle from: ./gradle/gradle-8.1.1/bin/gradle"
-          echo "Project dir: ${{ steps.findproj.outputs.proj_dir }}"
-          ./gradle/gradle-8.1.1/bin/gradle -p "${{ steps.findproj.outputs.proj_dir }}" clean assembleDebug --no-daemon
-        shell: bash
-
-      - name: Upload APK artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-debug-apk
-          path: ${{ steps.findproj.outputs.proj_dir }}/app/build/outputs/apk/debug/app-debug.apk
+dependencies {
+    implementation "androidx.camera:camera-core:1.3.2"
+    implementation "androidx.camera:camera-camera2:1.3.2"
+    implementation "androidx.camera:camera-lifecycle:1.3.2"
+    implementation "androidx.camera:camera-view:1.3.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
+    implementation 'com.google.mlkit:vision-segmentation-selfie:17.0.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
+}
