--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,48 +1,47 @@
-name: Build Debug APK
+plugins {
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+}
 
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - main
+android {
+    namespace 'com.example.portraitcamera'
+    compileSdk 34
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+    defaultConfig {
+        applicationId "com.example.portraitcamera"
+        minSdk 24
+        targetSdk 34
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+    }
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    buildTypes {
+        release {
+            minifyEnabled false
+        }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions { jvmTarget = '17' }
+}
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 17
+// NOTE: repositories intentionally omitted here.
+// All repositories are declared in settings.gradle's dependencyResolutionManagement.
 
-      - name: Download Gradle 8.1.1
-        run: |
-          curl -sSLo gradle.zip https://services.gradle.org/distributions/gradle-8.1.1-bin.zip
-          unzip -q gradle.zip -d gradle
-
-      - name: Detect project directory
-        id: detect
-        run: |
-          FILE=$(find . -maxdepth 4 -name "settings.gradle" | head -n 1)
-          if [ -z "$FILE" ]; then
-            echo "No settings.gradle found!"
-            exit 1
-          fi
-          DIR=$(dirname "$FILE")
-          echo "Project directory: $DIR"
-          echo "DIR=$DIR" >> $GITHUB_OUTPUT
-
-      - name: Build Debug APK
-        run: |
-          ./gradle/gradle-8.1.1/bin/gradle -p "${{ steps.detect.outputs.DIR }}" clean assembleDebug
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: PortraitCamera-APK
-          path: ${{ steps.detect.outputs.DIR }}/app/build/outputs/apk/debug/app-debug.apk
+dependencies {
+    implementation "androidx.camera:camera-core:1.3.2"
+    implementation "androidx.camera:camera-camera2:1.3.2"
+    implementation "androidx.camera:camera-lifecycle:1.3.2"
+    implementation "androidx.camera:camera-view:1.3.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
+    implementation 'com.google.mlkit:vision-segmentation-selfie:17.0.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
+}
