--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,47 +1,48 @@
-plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-}
+name: Android CI - Build APK
 
-android {
-    namespace 'com.example.portraitcamera'
-    compileSdk 34
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
 
-    defaultConfig {
-        applicationId "com.example.portraitcamera"
-        minSdk 24
-        targetSdk 34
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        multiDexEnabled true
-    }
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    buildTypes {
-        release {
-            minifyEnabled false
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
-    kotlinOptions { jvmTarget = '17' }
-}
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-// NOTE: repositories intentionally omitted here.
-// All repositories are declared in settings.gradle's dependencyResolutionManagement.
+      - name: Download Android SDK (sdkmanager)
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 33
+          target: google_apis
+          arch: x86_64
+          emulator-options: "-no-window"
+      # The action above ensures SDK tools + platform are available.
 
-dependencies {
-    implementation "androidx.camera:camera-core:1.3.2"
-    implementation "androidx.camera:camera-camera2:1.3.2"
-    implementation "androidx.camera:camera-lifecycle:1.3.2"
-    implementation "androidx.camera:camera-view:1.3.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
-    implementation 'com.google.mlkit:vision-segmentation-selfie:17.0.0'
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'com.google.android.material:material:1.10.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
-    implementation 'androidx.multidex:multidex:2.0.1'
-}
+      - name: Cache Gradle
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Run Gradle assemble
+        run: ./gradlew clean assembleRelease --no-daemon
+        # or use assembleDebug for debug APK
+
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: portraitcamera-apk
+          path: app/build/outputs/apk/release/*.apk
