--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,5 +1,4 @@
-name: Android CI - Build APK
-
+name: Android CI - Build Debug APK
 on:
   push:
     branches: [ main ]
@@ -8,6 +7,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      ANDROID_SDK_ROOT: ${{ runner.tool_cache }}/android-sdk
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -18,14 +20,17 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Download Android SDK (sdkmanager)
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 33
-          target: google_apis
-          arch: x86_64
-          emulator-options: "-no-window"
-      # The action above ensures SDK tools + platform are available.
+      - name: Install Android SDK tools & packages
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y unzip wget
+          mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
+          cd $ANDROID_SDK_ROOT
+          wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+          unzip -q cmdline-tools.zip -d cmdline-tools
+          mv cmdline-tools/cmdline-tools cmdline-tools/latest
+          yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+        shell: bash
 
       - name: Cache Gradle
         uses: actions/cache@v4
@@ -37,12 +42,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: Run Gradle assemble
-        run: ./gradlew clean assembleRelease --no-daemon
-        # or use assembleDebug for debug APK
+      - name: Run Gradle assembleDebug
+        run: ./gradlew clean assembleDebug --no-daemon
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: portraitcamera-apk
-          path: app/build/outputs/apk/release/*.apk
+          path: app/build/outputs/apk/debug/*.apk
