--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,4 +1,4 @@
-name: Android CI - Build Debug APK (auto-detect project dir)
+name: Android CI - Build Debug APK (fixed SDK env)
 
 on:
   push:
@@ -32,15 +32,12 @@ jobs:
       - name: Detect Gradle project directory
         id: detect
         run: |
-          # Find first directory that contains settings.gradle(.kts) or build.gradle(.kts)
           project_dir=$(git ls-files -co --exclude-standard \
             | grep -E '(^|/)(settings.gradle|settings.gradle.kts|build.gradle|build.gradle.kts)$' \
             | sed -E 's@/(settings.gradle|settings.gradle.kts|build.gradle|build.gradle.kts)@@' \
             | head -n1 || true)
 
-          # If file is at repo root, sed returns empty string -> set to "."
           if [ -z "$project_dir" ]; then
-            # check if root has build files
             if [ -f "./settings.gradle" ] || [ -f "./settings.gradle.kts" ] || [ -f "./build.gradle" ] || [ -f "./build.gradle.kts" ]; then
               project_dir="."
             fi
@@ -48,7 +45,6 @@ jobs:
 
           if [ -z "$project_dir" ]; then
             echo "No Gradle build file found in repository. Aborting."
-            echo "searched for: settings.gradle settings.gradle.kts build.gradle build.gradle.kts"
             exit 1
           fi
 
@@ -56,9 +52,11 @@ jobs:
           echo "PROJECT_DIR=$project_dir" >> "$GITHUB_ENV"
         shell: bash
 
-      - name: Configure Android SDK (commandline tools + packages)
+      - name: Configure Android SDK (command-line tools + packages) and set SDK envs
         run: |
           set -euo pipefail
+
+          # Install SDK into runner tool cache so it's consistent and possibly cached
           ANDROID_SDK_ROOT="${RUNNER_TOOL_CACHE}/android-sdk"
           mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
           cd "$ANDROID_SDK_ROOT"
@@ -76,10 +74,16 @@ jobs:
           fi
 
           export PATH="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH"
+
+          # Accept licenses and install SDK packages
           yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses >/dev/null || true
           sdkmanager --sdk_root="$ANDROID_SDK_ROOT" "platform-tools" "platforms;android-${ANDROID_API_LEVEL}" "build-tools;${ANDROID_BUILD_TOOLS}"
 
+          # Make sure BOTH ANDROID_SDK_ROOT and ANDROID_HOME point to the same path (Gradle requires one consistent path)
           echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT" >> "$GITHUB_ENV"
+          echo "ANDROID_HOME=$ANDROID_SDK_ROOT" >> "$GITHUB_ENV"
+
+          # Add SDK tools to PATH for following steps
           echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin" >> "$GITHUB_PATH"
           echo "$ANDROID_SDK_ROOT/platform-tools" >> "$GITHUB_PATH"
         shell: bash
@@ -100,19 +104,16 @@ jobs:
           set -euo pipefail
           cd "$PROJECT_DIR"
           if [ -f "./gradlew" ]; then
-            echo "Using Gradle wrapper from $PROJECT_DIR"
             chmod +x ./gradlew
             echo "GRADLE_CMD=./gradlew" >> "$GITHUB_ENV"
           else
-            echo "No Gradle wrapper found in $PROJECT_DIR. Downloading Gradle ${FALLBACK_GRADLE_VERSION}."
             GRADLE_ZIP="gradle-${FALLBACK_GRADLE_VERSION}-bin.zip"
             if [ ! -f "$GRADLE_ZIP" ]; then
               wget -q "https://services.gradle.org/distributions/${GRADLE_ZIP}"
             fi
             mkdir -p "$HOME/gradle"
             unzip -o -q "$GRADLE_ZIP" -d "$HOME/gradle"
-            export GRADLE_HOME="$HOME/gradle/gradle-${FALLBACK_GRADLE_VERSION}"
-            echo "$GRADLE_HOME/bin" >> "$GITHUB_PATH"
+            echo "$HOME/gradle/gradle-${FALLBACK_GRADLE_VERSION}/bin" >> "$GITHUB_PATH"
             echo "GRADLE_CMD=gradle" >> "$GITHUB_ENV"
           fi
         shell: bash
@@ -120,6 +121,8 @@ jobs:
       - name: Show Java & Gradle info
         run: |
           echo "PROJECT_DIR=$PROJECT_DIR"
+          echo "ANDROID_HOME=$ANDROID_HOME"
+          echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT"
           java -version
           if [ -f "$PROJECT_DIR/gradlew" ]; then
             (cd "$PROJECT_DIR" && ./gradlew -v)
@@ -131,7 +134,6 @@ jobs:
       - name: Build debug APK (in detected project dir)
         run: |
           set -euo pipefail
-          echo "Building in PROJECT_DIR=$PROJECT_DIR"
           cd "$PROJECT_DIR"
           if [ -f "./gradlew" ]; then
             ./gradlew clean assembleDebug --no-daemon
@@ -143,7 +145,6 @@ jobs:
 
       - name: Show any built APKs
         run: |
-          # list anything under build/outputs/apk
           echo "Listing APKs produced:"
           find . -path "*/build/outputs/apk/*.apk" -o -path "*/build/outputs/apk/**/*.apk" -print || true
         shell: bash
